parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_block
Rule 2     program_block -> declaration SEMICOLON program_block
Rule 3     program_block -> assignation SEMICOLON program_block
Rule 4     program_block -> normal_function program_block
Rule 5     program_block -> main_function
Rule 6     normal_function -> FUNCTION ID LPAREN RPAREN function_block
Rule 7     main_function -> FUNCTION MAIN LPAREN RPAREN function_block
Rule 8     function_block -> LBRACE instruction RBRACE
Rule 9     instruction -> proposition instruction
Rule 10    instruction -> empty
Rule 11    proposition -> function_call SEMICOLON
Rule 12    proposition -> assignation SEMICOLON
Rule 13    proposition -> print SEMICOLON
Rule 14    proposition -> input SEMICOLON
Rule 15    proposition -> unary_operation SEMICOLON
Rule 16    proposition -> if_sentence
Rule 17    proposition -> while_sentence
Rule 18    proposition -> do_while_sentence
Rule 19    proposition -> for_sentence
Rule 20    print -> COUT output_expression
Rule 21    output_expression -> OUTSTREAM expression output_expression
Rule 22    output_expression -> OUTSTREAM expression
Rule 23    output_expression -> OUTSTREAM TEXT output_expression
Rule 24    output_expression -> OUTSTREAM TEXT
Rule 25    input -> CIN input_expression
Rule 26    input_expression -> INSTREAM id input_expression
Rule 27    input_expression -> INSTREAM id
Rule 28    declaration -> type variables EQUAL expression
Rule 29    declaration -> type variables
Rule 30    type -> INT
Rule 31    type -> DOUBLE
Rule 32    assignation -> variables EQUAL expression
Rule 33    assignation -> variables
Rule 34    unary_operation -> ID PLUS PLUS
Rule 35    unary_operation -> ID MINUS MINUS
Rule 36    unary_operation -> PLUS PLUS ID
Rule 37    unary_operation -> MINUS MINUS ID
Rule 38    variables -> id COMMA variables
Rule 39    variables -> id
Rule 40    id -> ID
Rule 41    id -> ID vector
Rule 42    id -> ID vector vector
Rule 43    vector -> LBRACKET integer RBRACKET
Rule 44    vector -> LBRACKET ID RBRACKET
Rule 45    vector -> LBRACKET empty RBRACKET
Rule 46    function_call -> ID LPAREN RPAREN
Rule 47    if_sentence -> IF LPAREN expression RPAREN if_action_1 function_block empty if_action_2
Rule 48    if_sentence -> IF LPAREN expression RPAREN if_action_1 function_block ELSE if_action_2 function_block if_action_3
Rule 49    if_action_1 -> <empty>
Rule 50    if_action_2 -> <empty>
Rule 51    if_action_3 -> <empty>
Rule 52    while_sentence -> WHILE LPAREN expression RPAREN function_block
Rule 53    do_while_sentence -> DO function_block WHILE LPAREN expression RPAREN SEMICOLON
Rule 54    for_sentence -> FOR LPAREN for_expression RPAREN function_block
Rule 55    for_expression -> declaration SEMICOLON expression SEMICOLON assignation
Rule 56    for_expression -> declaration SEMICOLON expression SEMICOLON unary_operation
Rule 57    expression -> simple_expression
Rule 58    expression -> expression LESS_THAN expression_action_8 simple_expression expression_action_9
Rule 59    expression -> expression LESS_OR_EQUAL_THAN expression_action_8 simple_expression expression_action_9
Rule 60    expression -> expression EQUAL_THAN expression_action_8 simple_expression expression_action_9
Rule 61    expression -> expression DIFFERENT_THAN expression_action_8 simple_expression expression_action_9
Rule 62    expression -> expression GREATER_THAN expression_action_8 simple_expression expression_action_9
Rule 63    expression -> expression GREATER_OR_EQUAL_THAN expression_action_8 simple_expression expression_action_9
Rule 64    simple_expression -> term expression_action_4
Rule 65    simple_expression -> PLUS term expression_action_4
Rule 66    simple_expression -> MINUS term expression_action_4
Rule 67    simple_expression -> simple_expression OR expression_action_2 term expression_action_4
Rule 68    simple_expression -> simple_expression PLUS expression_action_2 term expression_action_4
Rule 69    simple_expression -> simple_expression MINUS expression_action_2 term expression_action_4
Rule 70    term -> factor
Rule 71    term -> term TIMES expression_action_3 factor expression_action_5
Rule 72    term -> term DIVIDE expression_action_3 factor expression_action_5
Rule 73    term -> term MOD expression_action_3 factor expression_action_5
Rule 74    term -> term AND expression_action_3 factor expression_action_5
Rule 75    factor -> id expression_action_1
Rule 76    factor -> number expression_action_1
Rule 77    factor -> NOT id expression_action_1
Rule 78    factor -> expression_action_6 LPAREN expression RPAREN expression_action_7
Rule 79    number -> real
Rule 80    number -> integer
Rule 81    real -> NUMBER DOT NUMBER
Rule 82    integer -> NUMBER
Rule 83    empty -> <empty>
Rule 84    expression_action_1 -> <empty>
Rule 85    expression_action_2 -> <empty>
Rule 86    expression_action_3 -> <empty>
Rule 87    expression_action_4 -> <empty>
Rule 88    expression_action_5 -> <empty>
Rule 89    expression_action_6 -> <empty>
Rule 90    expression_action_7 -> <empty>
Rule 91    expression_action_8 -> <empty>
Rule 92    expression_action_9 -> <empty>

Terminals, with rules where they appear

AND                  : 74
CIN                  : 25
COMMA                : 38
COUT                 : 20
DIFFERENT_THAN       : 61
DIVIDE               : 72
DO                   : 53
DOT                  : 81
DOUBLE               : 31
ELSE                 : 48
EQUAL                : 28 32
EQUAL_THAN           : 60
FOR                  : 54
FUNCTION             : 6 7
GREATER_OR_EQUAL_THAN : 63
GREATER_THAN         : 62
ID                   : 6 34 35 36 37 40 41 42 44 46
IF                   : 47 48
INSTREAM             : 26 27
INT                  : 30
LBRACE               : 8
LBRACKET             : 43 44 45
LESS_OR_EQUAL_THAN   : 59
LESS_THAN            : 58
LPAREN               : 6 7 46 47 48 52 53 54 78
MAIN                 : 7
MINUS                : 35 35 37 37 66 69
MOD                  : 73
NOT                  : 77
NUMBER               : 81 81 82
OR                   : 67
OUTSTREAM            : 21 22 23 24
PLUS                 : 34 34 36 36 65 68
RBRACE               : 8
RBRACKET             : 43 44 45
RPAREN               : 6 7 46 47 48 52 53 54 78
SEMICOLON            : 2 3 11 12 13 14 15 53 55 55 56 56
TEXT                 : 23 24
TIMES                : 71
WHILE                : 52 53
error                : 

Nonterminals, with rules where they appear

assignation          : 3 12 55
declaration          : 2 55 56
do_while_sentence    : 18
empty                : 10 45 47
expression           : 21 22 28 32 47 48 52 53 55 56 58 59 60 61 62 63 78
expression_action_1  : 75 76 77
expression_action_2  : 67 68 69
expression_action_3  : 71 72 73 74
expression_action_4  : 64 65 66 67 68 69
expression_action_5  : 71 72 73 74
expression_action_6  : 78
expression_action_7  : 78
expression_action_8  : 58 59 60 61 62 63
expression_action_9  : 58 59 60 61 62 63
factor               : 70 71 72 73 74
for_expression       : 54
for_sentence         : 19
function_block       : 6 7 47 48 48 52 53 54
function_call        : 11
id                   : 26 27 38 39 75 77
if_action_1          : 47 48
if_action_2          : 47 48
if_action_3          : 48
if_sentence          : 16
input                : 14
input_expression     : 25 26
instruction          : 8 9
integer              : 43 80
main_function        : 5
normal_function      : 4
number               : 76
output_expression    : 20 21 23
print                : 13
program              : 0
program_block        : 1 2 3 4
proposition          : 9
real                 : 79
simple_expression    : 57 58 59 60 61 62 63 67 68 69
term                 : 64 65 66 67 68 69 71 72 73 74
type                 : 28 29
unary_operation      : 15 56
variables            : 28 29 32 33 38
vector               : 41 42 42
while_sentence       : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_block
    (2) program_block -> . declaration SEMICOLON program_block
    (3) program_block -> . assignation SEMICOLON program_block
    (4) program_block -> . normal_function program_block
    (5) program_block -> . main_function
    (28) declaration -> . type variables EQUAL expression
    (29) declaration -> . type variables
    (32) assignation -> . variables EQUAL expression
    (33) assignation -> . variables
    (6) normal_function -> . FUNCTION ID LPAREN RPAREN function_block
    (7) main_function -> . FUNCTION MAIN LPAREN RPAREN function_block
    (30) type -> . INT
    (31) type -> . DOUBLE
    (38) variables -> . id COMMA variables
    (39) variables -> . id
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector

    FUNCTION        shift and go to state 7
    INT             shift and go to state 11
    DOUBLE          shift and go to state 12
    ID              shift and go to state 9

    main_function                  shift and go to state 1
    assignation                    shift and go to state 10
    variables                      shift and go to state 2
    normal_function                shift and go to state 13
    program_block                  shift and go to state 5
    program                        shift and go to state 4
    declaration                    shift and go to state 8
    type                           shift and go to state 6
    id                             shift and go to state 3

state 1

    (5) program_block -> main_function .

    $end            reduce using rule 5 (program_block -> main_function .)


state 2

    (32) assignation -> variables . EQUAL expression
    (33) assignation -> variables .

    EQUAL           shift and go to state 14
    RPAREN          reduce using rule 33 (assignation -> variables .)
    SEMICOLON       reduce using rule 33 (assignation -> variables .)


state 3

    (38) variables -> id . COMMA variables
    (39) variables -> id .

    COMMA           shift and go to state 15
    EQUAL           reduce using rule 39 (variables -> id .)
    SEMICOLON       reduce using rule 39 (variables -> id .)
    RPAREN          reduce using rule 39 (variables -> id .)


state 4

    (0) S' -> program .



state 5

    (1) program -> program_block .

    $end            reduce using rule 1 (program -> program_block .)


state 6

    (28) declaration -> type . variables EQUAL expression
    (29) declaration -> type . variables
    (38) variables -> . id COMMA variables
    (39) variables -> . id
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector

    ID              shift and go to state 9

    variables                      shift and go to state 16
    id                             shift and go to state 3

state 7

    (6) normal_function -> FUNCTION . ID LPAREN RPAREN function_block
    (7) main_function -> FUNCTION . MAIN LPAREN RPAREN function_block

    ID              shift and go to state 18
    MAIN            shift and go to state 17


state 8

    (2) program_block -> declaration . SEMICOLON program_block

    SEMICOLON       shift and go to state 19


state 9

    (40) id -> ID .
    (41) id -> ID . vector
    (42) id -> ID . vector vector
    (43) vector -> . LBRACKET integer RBRACKET
    (44) vector -> . LBRACKET ID RBRACKET
    (45) vector -> . LBRACKET empty RBRACKET

    TIMES           reduce using rule 40 (id -> ID .)
    DIVIDE          reduce using rule 40 (id -> ID .)
    MOD             reduce using rule 40 (id -> ID .)
    AND             reduce using rule 40 (id -> ID .)
    OR              reduce using rule 40 (id -> ID .)
    PLUS            reduce using rule 40 (id -> ID .)
    MINUS           reduce using rule 40 (id -> ID .)
    LESS_THAN       reduce using rule 40 (id -> ID .)
    LESS_OR_EQUAL_THAN reduce using rule 40 (id -> ID .)
    EQUAL_THAN      reduce using rule 40 (id -> ID .)
    DIFFERENT_THAN  reduce using rule 40 (id -> ID .)
    GREATER_THAN    reduce using rule 40 (id -> ID .)
    GREATER_OR_EQUAL_THAN reduce using rule 40 (id -> ID .)
    SEMICOLON       reduce using rule 40 (id -> ID .)
    RPAREN          reduce using rule 40 (id -> ID .)
    OUTSTREAM       reduce using rule 40 (id -> ID .)
    INSTREAM        reduce using rule 40 (id -> ID .)
    COMMA           reduce using rule 40 (id -> ID .)
    EQUAL           reduce using rule 40 (id -> ID .)
    LBRACKET        shift and go to state 20

    vector                         shift and go to state 21

state 10

    (3) program_block -> assignation . SEMICOLON program_block

    SEMICOLON       shift and go to state 22


state 11

    (30) type -> INT .

    ID              reduce using rule 30 (type -> INT .)


state 12

    (31) type -> DOUBLE .

    ID              reduce using rule 31 (type -> DOUBLE .)


state 13

    (4) program_block -> normal_function . program_block
    (2) program_block -> . declaration SEMICOLON program_block
    (3) program_block -> . assignation SEMICOLON program_block
    (4) program_block -> . normal_function program_block
    (5) program_block -> . main_function
    (28) declaration -> . type variables EQUAL expression
    (29) declaration -> . type variables
    (32) assignation -> . variables EQUAL expression
    (33) assignation -> . variables
    (6) normal_function -> . FUNCTION ID LPAREN RPAREN function_block
    (7) main_function -> . FUNCTION MAIN LPAREN RPAREN function_block
    (30) type -> . INT
    (31) type -> . DOUBLE
    (38) variables -> . id COMMA variables
    (39) variables -> . id
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector

    FUNCTION        shift and go to state 7
    INT             shift and go to state 11
    DOUBLE          shift and go to state 12
    ID              shift and go to state 9

    main_function                  shift and go to state 1
    assignation                    shift and go to state 10
    variables                      shift and go to state 2
    normal_function                shift and go to state 13
    program_block                  shift and go to state 23
    declaration                    shift and go to state 8
    type                           shift and go to state 6
    id                             shift and go to state 3

state 14

    (32) assignation -> variables EQUAL . expression
    (57) expression -> . simple_expression
    (58) expression -> . expression LESS_THAN expression_action_8 simple_expression expression_action_9
    (59) expression -> . expression LESS_OR_EQUAL_THAN expression_action_8 simple_expression expression_action_9
    (60) expression -> . expression EQUAL_THAN expression_action_8 simple_expression expression_action_9
    (61) expression -> . expression DIFFERENT_THAN expression_action_8 simple_expression expression_action_9
    (62) expression -> . expression GREATER_THAN expression_action_8 simple_expression expression_action_9
    (63) expression -> . expression GREATER_OR_EQUAL_THAN expression_action_8 simple_expression expression_action_9
    (64) simple_expression -> . term expression_action_4
    (65) simple_expression -> . PLUS term expression_action_4
    (66) simple_expression -> . MINUS term expression_action_4
    (67) simple_expression -> . simple_expression OR expression_action_2 term expression_action_4
    (68) simple_expression -> . simple_expression PLUS expression_action_2 term expression_action_4
    (69) simple_expression -> . simple_expression MINUS expression_action_2 term expression_action_4
    (70) term -> . factor
    (71) term -> . term TIMES expression_action_3 factor expression_action_5
    (72) term -> . term DIVIDE expression_action_3 factor expression_action_5
    (73) term -> . term MOD expression_action_3 factor expression_action_5
    (74) term -> . term AND expression_action_3 factor expression_action_5
    (75) factor -> . id expression_action_1
    (76) factor -> . number expression_action_1
    (77) factor -> . NOT id expression_action_1
    (78) factor -> . expression_action_6 LPAREN expression RPAREN expression_action_7
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector
    (79) number -> . real
    (80) number -> . integer
    (89) expression_action_6 -> .
    (81) real -> . NUMBER DOT NUMBER
    (82) integer -> . NUMBER

    PLUS            shift and go to state 29
    MINUS           shift and go to state 26
    NOT             shift and go to state 36
    ID              shift and go to state 9
    LPAREN          reduce using rule 89 (expression_action_6 -> .)
    NUMBER          shift and go to state 32

    real                           shift and go to state 31
    term                           shift and go to state 33
    expression                     shift and go to state 35
    factor                         shift and go to state 30
    number                         shift and go to state 27
    id                             shift and go to state 28
    expression_action_6            shift and go to state 34
    integer                        shift and go to state 24
    simple_expression              shift and go to state 25

state 15

    (38) variables -> id COMMA . variables
    (38) variables -> . id COMMA variables
    (39) variables -> . id
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector

    ID              shift and go to state 9

    variables                      shift and go to state 37
    id                             shift and go to state 3

state 16

    (28) declaration -> type variables . EQUAL expression
    (29) declaration -> type variables .

    EQUAL           shift and go to state 38
    SEMICOLON       reduce using rule 29 (declaration -> type variables .)


state 17

    (7) main_function -> FUNCTION MAIN . LPAREN RPAREN function_block

    LPAREN          shift and go to state 39


state 18

    (6) normal_function -> FUNCTION ID . LPAREN RPAREN function_block

    LPAREN          shift and go to state 40


state 19

    (2) program_block -> declaration SEMICOLON . program_block
    (2) program_block -> . declaration SEMICOLON program_block
    (3) program_block -> . assignation SEMICOLON program_block
    (4) program_block -> . normal_function program_block
    (5) program_block -> . main_function
    (28) declaration -> . type variables EQUAL expression
    (29) declaration -> . type variables
    (32) assignation -> . variables EQUAL expression
    (33) assignation -> . variables
    (6) normal_function -> . FUNCTION ID LPAREN RPAREN function_block
    (7) main_function -> . FUNCTION MAIN LPAREN RPAREN function_block
    (30) type -> . INT
    (31) type -> . DOUBLE
    (38) variables -> . id COMMA variables
    (39) variables -> . id
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector

    FUNCTION        shift and go to state 7
    INT             shift and go to state 11
    DOUBLE          shift and go to state 12
    ID              shift and go to state 9

    declaration                    shift and go to state 8
    main_function                  shift and go to state 1
    assignation                    shift and go to state 10
    variables                      shift and go to state 2
    normal_function                shift and go to state 13
    program_block                  shift and go to state 41
    type                           shift and go to state 6
    id                             shift and go to state 3

state 20

    (43) vector -> LBRACKET . integer RBRACKET
    (44) vector -> LBRACKET . ID RBRACKET
    (45) vector -> LBRACKET . empty RBRACKET
    (82) integer -> . NUMBER
    (83) empty -> .

    ID              shift and go to state 44
    NUMBER          shift and go to state 42
    RBRACKET        reduce using rule 83 (empty -> .)

    integer                        shift and go to state 43
    empty                          shift and go to state 45

state 21

    (41) id -> ID vector .
    (42) id -> ID vector . vector
    (43) vector -> . LBRACKET integer RBRACKET
    (44) vector -> . LBRACKET ID RBRACKET
    (45) vector -> . LBRACKET empty RBRACKET

    TIMES           reduce using rule 41 (id -> ID vector .)
    DIVIDE          reduce using rule 41 (id -> ID vector .)
    MOD             reduce using rule 41 (id -> ID vector .)
    AND             reduce using rule 41 (id -> ID vector .)
    OR              reduce using rule 41 (id -> ID vector .)
    PLUS            reduce using rule 41 (id -> ID vector .)
    MINUS           reduce using rule 41 (id -> ID vector .)
    LESS_THAN       reduce using rule 41 (id -> ID vector .)
    LESS_OR_EQUAL_THAN reduce using rule 41 (id -> ID vector .)
    EQUAL_THAN      reduce using rule 41 (id -> ID vector .)
    DIFFERENT_THAN  reduce using rule 41 (id -> ID vector .)
    GREATER_THAN    reduce using rule 41 (id -> ID vector .)
    GREATER_OR_EQUAL_THAN reduce using rule 41 (id -> ID vector .)
    SEMICOLON       reduce using rule 41 (id -> ID vector .)
    RPAREN          reduce using rule 41 (id -> ID vector .)
    OUTSTREAM       reduce using rule 41 (id -> ID vector .)
    COMMA           reduce using rule 41 (id -> ID vector .)
    EQUAL           reduce using rule 41 (id -> ID vector .)
    INSTREAM        reduce using rule 41 (id -> ID vector .)
    LBRACKET        shift and go to state 20

    vector                         shift and go to state 46

state 22

    (3) program_block -> assignation SEMICOLON . program_block
    (2) program_block -> . declaration SEMICOLON program_block
    (3) program_block -> . assignation SEMICOLON program_block
    (4) program_block -> . normal_function program_block
    (5) program_block -> . main_function
    (28) declaration -> . type variables EQUAL expression
    (29) declaration -> . type variables
    (32) assignation -> . variables EQUAL expression
    (33) assignation -> . variables
    (6) normal_function -> . FUNCTION ID LPAREN RPAREN function_block
    (7) main_function -> . FUNCTION MAIN LPAREN RPAREN function_block
    (30) type -> . INT
    (31) type -> . DOUBLE
    (38) variables -> . id COMMA variables
    (39) variables -> . id
    (40) id -> . ID
    (41) id -> . ID vector
    (42) id -> . ID vector vector

    FUNCTION        shift and go to state 7
    INT             shift and go to state 11
    DOUBLE          shift and go to state 12
    ID              shift and go to state 9

    main_function                  shift and go to state 1
    assignation                    shift and go to state 10
    variables                      shift and go to state 2
    normal_function                shift and go to state 13
    program_block                  shift and go to state 47
    declaration                    shift and go to state 8
    type                           shift and go to state 6
    id                             shift and go to state 3

state 23

    (4) program_block -> normal_function program_block .

    $end            reduce using rule 4 (program_block -> normal_function program_block .)


state 24

    (80) number -> integer .

    TIMES           reduce using rule 80 (number -> integer .)
    DIVIDE          reduce using rule 80 (number -> integer .)
    MOD             reduce using rule 80 (number -> integer .)
    AND             reduce using rule 80 (number -> integer .)
    OR              reduce using rule 80 (number -> integer .)
    PLUS            reduce using rule 80 (number -> integer .)
    MINUS           reduce using rule 80 (number -> integer .)
    LESS_THAN       reduce using rule 80 (number -> integer .)
    LESS_OR_EQUAL_THAN reduce using rule 80 (number -> integer .)
    EQUAL_THAN      reduce using rule 80 (number -> integer .)
    DIFFERENT_THAN  reduce using rule 80 (number -> integer .)
    GREATER_THAN    reduce using rule 80 (number -> integer .)
    GREATER_OR_EQUAL_THAN reduce using rule 80 (number -> integer .)
    SEMICOLON       reduce using rule 80 (number -> integer .)
    RPAREN          reduce using rule 80 (number -> integer .)
    OUTSTREAM       reduce using rule 80 (number -> integer .)


state 25

    (57) expression -> simple_expression .
    (67) simple_expression -> simple_expression . OR expression_action_2 term expression_action_4
    (68) simple_expression -> simple_expression . PLUS expression_action_2 term expression_action_4
    (69) simple_expression -> simple_expression . MINUS expression_action_2 term expression_action_4

    RPAREN          reduce using rule 57 (expression -> simple_expression .)
    LESS_THAN       reduce using rule 57 (expression -> simple_expression .)
    LESS_OR_EQUAL_THAN reduce using rule 57 (expression -> simple_expression .)
    EQUAL_THAN      reduce using rule 57 (expression -> simple_expression .)
    DIFFERENT_THAN  reduce using rule 57 (expression -> simple_expression .)
    GREATER_THAN    reduce using rule 57 (expression -> simple_expression .)
    GREATER_OR_EQUAL_THAN reduce using rule 57 (expression -> simple_expression .)
    SEMICOLON       reduce using rule 57 (expression -> simple_expression .)
    OUTSTREAM       reduce using rule 57 (expression -> simple_expression .)
    OR              shift and go to state 50
    PLUS            shift and go to state 49
    MINUS           shift and go to state 48


state 26
